Style: fixing header letterspacing and fontsize

--- a/src/app/component/Header.module.css
+++ b/src/app/component/Header.module.css
@@ -14,7 +14,7 @@
  position: absolute;
  color: rgb(35, 24, 1);
  text-shadow: 2px 2px 2px wheat;
- font-size: 6vw;
+ font-size: 7vw;
  white-space: nowrap;
 }
 
